--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -42,7 +42,8 @@ sky:
     # 设置jwt签名加密时使用的秘钥
     admin-secret-key: itcast
     # 设置jwt过期时间
-    admin-ttl: 7200000
+    # TODO:恢复正常令牌时长
+    admin-ttl: 7200000000 # 7200 000 =2h, 7200 000 000 =2000h
     # 设置前端传递过来的令牌名称
     admin-token-name: token
 
