--- a/SES-server/src/main/resources/application.yml
+++ b/SES-server/src/main/resources/application.yml
@@ -5,12 +5,12 @@ server:
 SES:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    host: localhost
+    host: 172.26.105.159
     port: 3306
-    database: SES_db
-    username: root
-    password: 123456
-    # TODO：建立数据库后，需要改为对应的账户信息
+    database: smart_device_db
+    username: dev_user
+    password: StrongPassword123!
+
 
   jwt: # 设置jwt签名加密时使用的秘钥
       admin-secret-key: itcast
