--- a/SES-server/src/main/resources/application.yml
+++ b/SES-server/src/main/resources/application.yml
@@ -17,6 +17,8 @@ SES:
       # 设置jwt过期时间
       # TODO:恢复正常令牌时长
       admin-ttl: 7200000000 # 7200 000 =2h, 7200 000 000 =2000h
+      # 刷新 token 的容忍时间
+      refresh-tolerance: 1800000 # 1800 000 = 30min
       # 设置前端传递过来的令牌名称
       admin-token-name: token
 
