--- a/SES-server/src/main/resources/application.yml
+++ b/SES-server/src/main/resources/application.yml
@@ -5,11 +5,11 @@ server:
 SES:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    host: 172.26.105.159
+    host: rm-cn-kjp4akl9e00053o.rwlb.rds.aliyuncs.com
     port: 3306
     database: smart_device_db
-    username: dev_user
-    password: StrongPassword123!
+    username: testuser
+    password: 123456Test@
 
 
   jwt: # 设置jwt签名加密时使用的秘钥
@@ -30,6 +30,7 @@ spring:
   main:
     allow-circular-references: true
   datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
     druid:
       driver-class-name: ${SES.datasource.driver-class-name}
       url: jdbc:mysql://${SES.datasource.host}:${SES.datasource.port}/${SES.datasource.database}?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
@@ -55,7 +56,6 @@ logging:
         mapper: debug
         service: info
         controller: info
-
 
 
 
