--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,12 @@
                 <version>3.1.8</version>
             </dependency>
 
+            <!-- Java 8 时间支持 -->
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jsr310</artifactId>
+                <version>2.15.3</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
